css/default.css
/* ... */
.collapse > .disclosure-button:hover {
    --collapse-button-background-color: var(--GW-collapse-disclosure-button-hover-color);
    --collapse-button-text-color: var(--GW-collapse-disclosure-button-text-hover-color);
}
.collapse > .disclosure-button:focus {
    outline: none;
}

.collapse-block > .disclosure-button {
    position: absolute;
    top: 0;
    right: 0;
    width: 100%;
    height: 100%;
    font-size: 0.875em;
    font-family: var(--GW-sans-serif-font-stack);
    box-shadow:
        var(--collapse-toggle-left-width) 0 0 0 var(--collapse-button-background-color) inset;
}
@media all and (max-width: 649px) {
    .collapse-block > .disclosure-button {
        font-size: 1em;
    }
}

/*  Top and bottom parts of disclosure button.
 */
.collapse-block > .disclosure-button .part {
    position: absolute;
    right: 0;
    width: 100%;
    box-sizing: border-box;
    display: flex;
    align-items: stretch;
    text-decoration: underline;
    text-underline-offset: 3px;
}

.collapse-block > .disclosure-button .part::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: -1;
    background-color: var(--collapse-button-background-color);
    transition:
        background-color 0.1s ease;
}

.collapse-block > .disclosure-button .part > span {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--collapse-button-background-color);
    transition:
        background-color 0.1s ease,
        opacity 0.1s ease;
}

.collapse-block > .disclosure-button .part .icon {
    width: var(--icon-size);
    height: var(--icon-size);
    padding: calc(var(--icon-size) / 4);
    box-sizing: border-box;
}
.collapse-block > .disclosure-button .part .icon svg {
    height: 100%;
}

.collapse-block > .disclosure-button .part .label {
    opacity: 0;
}
.collapse-block > .disclosure-button.labels-visible .part .label {
    opacity: 1;
}

/*  Top part of disclosure button.
 */
.collapse-block > .disclosure-button .part.top {
    --icon-size: var(--collapse-toggle-top-icon-size);

    top: 0;
    height: var(--collapse-toggle-top-height);
    justify-content: flex-end;
}

.collapse-block.expanded-not > .disclosure-button:hover .part.top .icon svg {
    transform: rotate(-0.25turn);
    transition:
        transform 1.0s ease;
}
.collapse-block.expanded-not.hover-not > .disclosure-button:hover .part.top .icon svg {
    transform: none;
    transition: none;
}
.collapse-block.expanded > .disclosure-button .part.top .icon svg {
    transform: rotate(-0.25turn);
}
.collapse-block.expanded-not.just-clicked > .disclosure-button:hover .part.top .icon svg {
    transform: none;
    transition: none;
}

.collapse-block > .disclosure-button .part.top .label {
    padding: 0 0 0 1.25em;
    margin-right: 1.5em;
}

/*  Bottom part of disclosure button.
 */
.collapse-block > .disclosure-button .part.bottom {
    --icon-size: var(--collapse-toggle-bottom-icon-size);

    bottom: 0;
    height: var(--collapse-toggle-bottom-height);
    justify-content: center;
}

.collapse-block > .disclosure-button .part.bottom .label {
    padding: 0 1em;
}

.collapse-block > .disclosure-button .part.bottom .icon {
    position: absolute;
}
.collapse-block > .disclosure-button.labels-visible .part.bottom .icon {
    opacity: 0;
}
.collapse-block > .disclosure-button .part.bottom .icon svg {
    transform: rotate(-0.25turn);
}
.collapse-block.expanded > .disclosure-button .part.bottom .icon svg {
    transform: rotate(0.25turn);
}

/*  Disclosure button edge cases.
 */
.collapse-block.just-auto-expanded > .disclosure-button.labels-visible .part .label {
    opacity: 0;
    transition: none;
}
.collapse-block.no-abstract.expanded-not > .disclosure-button .part.bottom > span {
    display: none;
}

/*  Iceberg indicators.
 */
.collapse-block > .disclosure-button > .collapse-iceberg-indicator {
    --indicator-size: calc(0.5 * var(--collapse-toggle-top-icon-size));

    position: absolute;
    right: 1.75em;
    font-size: var(--indicator-size);
    top: calc(0.5 * (var(--collapse-toggle-top-icon-size) - var(--indicator-size)));
    opacity: 0.6;
}
.collapse-block > .disclosure-button > .collapse-iceberg-indicator .inline-icon {
    top: 0;
    background-color: transparent;
}

/*  Inline disclosure button.
 */
.collapse-inline > .collapse-content-outer-wrapper > .disclosure-button,
.collapse-inline > .collapse-content-outer-wrapper > .disclosure-button .icon {
    display: inline-flex;
    align-items: center;
    justify-content: center;
}
.collapse-inline > .collapse-content-outer-wrapper > .disclosure-button {
    --collapse-button-text-color: var(--GW-collapse-inline-disclosure-button-text-color);

    height: 1em;
    vertical-align: text-bottom;
    position: relative;
    bottom: 0.15em;
}
.collapse-inline > .collapse-content-outer-wrapper > .disclosure-button:hover,
.collapse-inline > .collapse-content-outer-wrapper > .disclosure-button.hover {
    --collapse-button-text-color: var(--GW-collapse-inline-disclosure-button-text-hover-color);
}

.collapse-inline > .collapse-content-outer-wrapper > .disclosure-button .icon {
    height: 100%;
    color: var(--collapse-button-text-color);
    transition:
        color 0.1s ease;
}
.collapse-inline.expanded > .collapse-content-outer-wrapper > .disclosure-button.start {
    display: none;
}

.collapse-inline > .collapse-content-outer-wrapper > .disclosure-button .icon svg {
    display: block;
    width: 1em;
    height: 100%;
}

.collapse-inline > .collapse-content-outer-wrapper > .disclosure-button.end .icon svg:nth-last-of-type(2) {
    height: 90%;
    margin: 0 -0.45em 0 0;
}
.collapse-inline.expanded-not > .collapse-content-outer-wrapper > .disclosure-button.end .icon svg:nth-last-of-type(2) {
    margin: 0 -0.45em 0 -0.45em;
}

.collapse-inline.expanded > .collapse-content-outer-wrapper > .disclosure-button.end .icon svg:nth-last-of-type(2) {
    transform: rotateZ(0.5turn);
}
/* ... */

